started css, dummy content on homepage

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,1 +1,42 @@
-<h1>Homepage</h1>
+<div class="container">
+
+  <div class="row">
+    <h3>Projects</h3>
+  </div>
+  <div class="row">
+    <div class="one-third column">
+      <h5>Project</h5>
+      <p>Details about project blah blah blah blah blah blah blah</p>
+      <a href="#">View Project</a>
+    </div>
+    <div class="one-third column">
+      <h5>Project</h5>
+      <p>Details about project blah blah blah blah blah blah blah</p>
+      <a href="#">View Project</a>
+    </div>
+    <div class="one-third column">
+      <h5>Project</h5>
+      <p>Details about project blah blah blah blah blah blah blah</p>
+      <a href="#">View Project</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="one-third column">
+      <h5>Project</h5>
+      <p>Details about project blah blah blah blah blah blah blah</p>
+      <a href="#">View Project</a>
+    </div>
+    <div class="one-third column">
+      <h5>Project</h5>
+      <p>Details about project blah blah blah blah blah blah blah</p>
+      <a href="#">View Project</a>
+    </div>
+    <div class="one-third column">
+      <h5>Project</h5>
+      <p>Details about project blah blah blah blah blah blah blah</p>
+      <a href="#">View Project</a>
+    </div>
+  </div>
+
+</div>
