worked on footer and spacing

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -7,17 +7,20 @@
     <div class="one-third column">
       <h5>Project</h5>
       <p>Details about project blah blah blah blah blah blah blah</p>
-      <a href="#">View Project</a>
+      <a href="#">GitHub</a>
+      <a href="#">Heroku</a>
     </div>
     <div class="one-third column">
       <h5>Project</h5>
       <p>Details about project blah blah blah blah blah blah blah</p>
-      <a href="#">View Project</a>
+      <a href="#">GitHub</a>
+      <a href="#">Heroku</a>
     </div>
     <div class="one-third column">
       <h5>Project</h5>
       <p>Details about project blah blah blah blah blah blah blah</p>
-      <a href="#">View Project</a>
+      <a href="#">GitHub</a>
+      <a href="#">Heroku</a>
     </div>
   </div>
 
@@ -25,17 +28,20 @@
     <div class="one-third column">
       <h5>Project</h5>
       <p>Details about project blah blah blah blah blah blah blah</p>
-      <a href="#">View Project</a>
+      <a href="#">GitHub</a>
+      <a href="#">Heroku</a>
     </div>
     <div class="one-third column">
       <h5>Project</h5>
       <p>Details about project blah blah blah blah blah blah blah</p>
-      <a href="#">View Project</a>
+      <a href="#">GitHub</a>
+      <a href="#">Heroku</a>
     </div>
     <div class="one-third column">
       <h5>Project</h5>
       <p>Details about project blah blah blah blah blah blah blah</p>
-      <a href="#">View Project</a>
+      <a href="#">GitHub</a>
+      <a href="#">Heroku</a>
     </div>
   </div>
 
