--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,14 @@
 // Import all of your scss files here
 @import 'skeleton';
-
+html {
+  background-color: #383838;
+}
 header, footer {
   width: 100%;
   height: 250px;
-  background-color: #383838;
+}
+main {
+  background-color: white;
 }
 header {
   h1 {
@@ -37,10 +41,18 @@ footer {
 } // end of footer
 .column, .columns {
   height:200px;
-  background-color: teal;
+  // background-color: teal;
+}
+.btn-container {
+  text-align: center;
 }
 .row {
   h3, h5 {
     text-align: center;
+  }
+}
+.project-display {
+  h4 {
+    display: inline;
   }
 }
