added fontawesome, changed font sizez, added about section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,13 @@
 // Import all of your scss files here
 @import 'skeleton';
+@import 'font-awesome';
 html {
   background-color: #383838;
   p, h1, h2, h3, h4, h5 {
     color: #383838;
+  }
+  p {
+    font-size: 16px;
   }
 }
 header, footer {
@@ -45,6 +49,13 @@ main {
       height:auto;
     }
   }
+  .about {
+    width: 100%;
+    background-color: #383838;
+    p, h3 {
+      color: white;
+    }
+  }
 }
 header {
   h1 {
@@ -73,6 +84,9 @@ footer {
   }
   p {
     color:white;
+  }
+  a {
+    padding-right: 20px;
   }
 } // end of footer
 .text-centered {
