--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,18 +1,18 @@
 
 <!-- Projects section -->
 
-<div class="container title-section">
+<div class="container title-section" ng-hide="home.currentProject.title">
   <div class="row">
-    <h3 ng-hide="home.currentProject.title">Projects</h3>
+    <h3>Projects</h3>
   </div>
 </div>
 
-<div class="container">
+<div class="container" ng-hide="home.currentProject.title">
   <div class="row">
 
-    <div ng-hide="home.currentProject.title" class="row" ng-repeat="projects3 in home.projects.projects">
+    <div class="row" ng-repeat="projects3 in home.projects.projects">
       <div class="one-third column myColumn text-centered" ng-repeat="project in projects3">
-        <h5 ng-click="home.chooseProject(project)">{{project.title}}</h5>
+        <h5>{{project.title}}</h5>
         <div class="btn-container">
           <a class="button" ng-click="home.chooseProject(project)">View</a>
         </div>
@@ -27,7 +27,7 @@
 
 <!-- currentProject section -->
 
-<div class="container" ng-show="home.currentProject.title" class="row project-display">
+<div class="container project-display" ng-show="home.currentProject.title">
   <div class="row">
     <h4>{{home.currentProject.title}}</h4>
   </div>
@@ -43,7 +43,7 @@
     </div>
     <div class="four columns myColumn">
       <div class="btn-container">
-        <a class="button" ng-click="home.hideProject()">Close</a><br><br>
+        <a class="button" ng-click="home.hideProject()">Back</a><br><br>
         <span ng-repeat="link in home.currentProject.pageContent.links"><a class="button" href="{{link.url}}">{{link.text}}</a><br></span>
       </div>
       <div ng-show="home.currentProject.pageContent.colabs.length">
@@ -58,6 +58,21 @@
 </div>
 
 <!-- end of currentProject section -->
+
+<!-- About section -->
+<div class="container title-section about" ng-hide="home.currentProject.title">
+  <div class="row">
+    <h3>About me</h3>
+  </div>
+</div>
+
+<div class="container title-section about" ng-hide="home.currentProject.title">
+  <div class="row">
+    <p>I’m a feature focussed MEAN stack developer, for now, with a strong interest in high performance large scale server systems and microservices. I want to play with the most powerful computers there are, I’ve found a way in and it’s only just begun.</p>
+  </div>
+</div>
+
+<!-- end of about section -->
 
 <!-- Contact section -->
 
