finishing touches, contact form doesn't work yet but I have to deploy anyway

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -76,7 +76,7 @@
 
 <!-- Contact section -->
 
-<div class="container title-section" ng-hide="home.currentProject.title">
+<!-- <div class="container title-section" ng-hide="home.currentProject.title">
   <div class="row">
     <h3>Contact</h3>
   </div>
@@ -109,6 +109,6 @@
     </form>
 
   </div>
-</div>
+</div> -->
 
 <!-- end of contact section -->
