--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,13 +49,13 @@ main {
       height:auto;
     }
   }
-  .about {
-    width: 100%;
-    background-color: #383838;
-    p, h3 {
-      color: white;
-    }
-  }
+  // .about {
+  //   width: 100%;
+  //   background-color: #383838;
+  //   p, h3 {
+  //     color: white;
+  //   }
+  // }
 }
 header {
   h1 {
