centered text in about section

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -68,7 +68,7 @@
 
 <div class="container title-section about" ng-hide="home.currentProject.title">
   <div class="row">
-    <p>I’m a feature focussed MEAN stack developer, for now, with a strong interest in high performance large scale server systems and microservices. I want to play with the most powerful computers there are, I’ve found a way in and it’s only just begun.</p>
+    <p class="text-centered">I’m a feature focussed MEAN stack developer, for now, with a strong interest in high performance large scale server systems and microservices. I want to play with the most powerful computers there are, I’ve found a way in and it’s only just begun.</p>
   </div>
 </div>
 
