--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -60,6 +60,7 @@
 <!-- end of currentProject section -->
 
 <!-- About section -->
+
 <div class="container title-section about" ng-hide="home.currentProject.title">
   <div class="row">
     <h3>About me</h3>
@@ -69,6 +70,64 @@
 <div class="container title-section about" ng-hide="home.currentProject.title">
   <div class="row">
     <p>I’m a feature focussed MEAN stack developer, for now, with a strong interest in high performance large scale server systems and microservices. I want to play with the most powerful computers there are, I’ve found a way in and it’s only just begun.</p>
+  </div>
+</div>
+
+<!-- end of about section -->
+
+<!-- About section -->
+
+<div class="container title-section about" ng-hide="home.currentProject.title">
+  <div class="row">
+    <h3>Techs</h3>
+  </div>
+</div>
+
+<div class="container title-section about" ng-hide="home.currentProject.title">
+  <div class="row">
+    <div class="six columns">
+      <h5>Languages</h5>
+      <ul>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>HTML5/CSS3</li>
+        <li>Ruby</li>
+      </ul>
+    </div>
+    <div class="six columns">
+      <h5>Strong</h5>
+      <ul>
+        <li>MEAN stack, AngularJS 1</li>
+        <li>jQuery, Node.js, Express.js</li>
+        <li>Mocha, Chai and supertest TDD</li>
+        <li>MongoDB</li>
+        <li>Bash CLI, ssh/scp, nano</li>
+        <li>Linux Unity and Server</li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="six columns">
+      <h5>Comfortable</h5>
+      <ul>
+        <li>Rails, Django, Flask</li>
+        <li>Dev-ops, system installation, deployment</li>
+        <li>KVM virtual machines</li>
+        <li>Git, Gulp, Bower, yarn</li>
+        <li>SQlite3, PostgreSQL</li>
+        <li>Agile development, Trello, Heroku</li>
+        <li>Mac OSX</li>
+      </ul>
+    </div>
+    <div class="six columns">
+      <h5>Played with</h5>
+      <ul>
+        <li>Python machine learning, SciKit, TensorFlow</li>
+        <li>Sentiment analysis</li>
+        <li>Unity game development</li>
+        <li>C, C++, MS DOS</li>
+      </ul>
+    </div>
   </div>
 </div>
 
