clearing the cross, no real changes

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -75,7 +75,7 @@
 
 <!-- end of about section -->
 
-<!-- About section -->
+<!-- Techs section -->
 
 <div class="container title-section about" ng-hide="home.currentProject.title">
   <div class="row">
@@ -131,7 +131,7 @@
   </div>
 </div>
 
-<!-- end of about section -->
+<!-- end of techs section -->
 
 <!-- Contact section -->
 
